--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,7 +4,7 @@
   color: #5900ff;
   padding: 18px;
   margin: 30px auto;
-  max-width: 600px;
+
   border-radius: 10px;
 }
 
@@ -28,4 +28,27 @@
 .Weather ul {
   margin: 0px;
   padding: 0px;
+}
+
+.Weather .temperature {
+  font-weight: 400;
+  font-size: 65px;
+  line-height: 65px;
+  margin-left: 1px;
+}
+
+.Weather img {
+  height: 80px;
+  margin-right: 0px;
+  display: inline-block;
+  width: 70px;
+}
+
+.Weather .units {
+  font-size: 32px;
+  font-weight: 200;
+  position: relative;
+  top: -20px;
+  margin-left: 2px;
+  line-height: 1px;
 }
