--- a/src/Weather.css
+++ b/src/Weather.css
@@ -37,11 +37,9 @@
   margin-left: 0px;
 }
 
-.Weather img {
-  height: 80px;
-  margin-right: 0px;
+.Weather canvas {
+  margin-right: 5px;
   display: inline-block;
-  width: 70px;
 }
 
 .Weather .units {
