--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,9 +1,11 @@
 .WeatherForecast canvas {
   display: block;
-  margin: 20px auto;
+  margin: auto;
+  font-weight: bold;
 }
 
 .WeatherForecast {
   text-align: center;
   margin: 5px 0;
+  color: #0d2011;
 }
